--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,12 +3,12 @@
 @using System.Net.Http.Json
 @using TamboliyaLibrary.DAL
 @using TamboliyaLibrary.Models
+@using Microsoft.AspNetCore.Authorization
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavManager;
 @inject IHttpClientFactory ClientFactory
 @inject IAuthService AuthService
-
-@using Microsoft.AspNetCore.Authorization
+@inject ILoggerFactory LoggerFactory
 @attribute [Authorize(Roles = "User")]
 
 <div style="margin: auto;width: 990px; height:500px;background-image: url(@(pathToImage));" id="baseImage"></div>
@@ -105,9 +105,11 @@
     private Chat? chat = new();
     private bool _disposed = false;
     private int offset = 0;
+    private ILogger<Index> logger = null!;
 
     protected override async Task OnInitializedAsync()
     {
+        logger = LoggerFactory.CreateLogger<Index>();
         offset = await JSRuntime.InvokeAsync<int>("getAppTimeZone");
 
         var token = await AuthService.GetHttpClientToken();
@@ -132,7 +134,7 @@
         }
         catch (Exception ex)
         {
-            Console.WriteLine(ex);
+            logger.LogWarning(ex.Message);
         }
         pathToImage = game!.PathToImage;
         RegionOnMap = game!.ActualPosition!.RegionOnMap;
@@ -153,6 +155,7 @@
         }
         catch (Exception ex)
         {
+            logger.LogWarning(ex.Message);
             throw new OperationCanceledException(ex.Message);
         }
     }
