--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -107,6 +107,11 @@
     private int offset = 0;
     private ILogger<Index> logger = null!;
 
+
+    
+//UNDONE: Додати перевірку статусу http-запитів, якщо відповідь з кодом 401, видаляти з локального сховища запис і направляти на сторінку авторизації
+
+
     protected override async Task OnInitializedAsync()
     {
         logger = LoggerFactory.CreateLogger<Index>();
