--- a/_Imports.razor
+++ b/_Imports.razor
@@ -18,6 +18,7 @@
 @using Tamboliya.Shared
 @using Tamboliya.Helpers
 @using Tamboliya.Services
-@using TamboliyaLibrary.Models;
+@using Tamboliya.Repositories
+@using TamboliyaLibrary.Models
 @using TamboliyaLibrary.DAL
 @inject HttpClient Http
