--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -70,7 +70,7 @@
     {
         <div style="display:flex;">
             <div style="width:50%; max-height:600px; overflow-y:scroll;">
-                <Chat RoomName="@GameId.Value" GameFinished="gameFinished" @ref="@chat" />
+                <Chat GameId="@GameId.Value" GameFinished="gameFinished" @ref="@chat" />
             </div>
             <div style="width:50%; display:flex; max-height:600px; overflow-y:scroll;">
                 <table class="table">
