--- a/Shared/Chat.razor
+++ b/Shared/Chat.razor
@@ -6,35 +6,46 @@
 @inject IGameLogRepository GameLogRepo
 @inject IGameRepository GameRepo
 @inject IConfiguration Config;
+@inject IJSRuntime Js
 @attribute [Authorize(Roles = "User")]
 @using Microsoft.AspNetCore.SignalR.Client
 @using System.Net.Http.Json
 @using Microsoft.Extensions.Configuration
 
-
 <PageTitle>Chat component</PageTitle>
 
 @if (!GameFinished)
 {
-    <Rtc ParentGameId="@_parentGameId" />
-    <div class="form-group">
-        <label>
-            Message:
-            <input @bind="messageInput" type="text" />
-        </label>
-    </div>
-    <button @onclick="SendTextMessage" disabled="@(!IsConnected)">Send</button>
-}
-<hr>
+    <main class="container">
+        <div id="room__container">
+            <Rtc ParentGameId="@_parentGameId" GameId="@GameId" />
 
-<ul id="messagesList">
-    @foreach (var message in logLines)
-    {
-        <li>@message</li>
-    }
-</ul>
+            <section id="messages__container">
+                <form id="message__form">
+                    <input type="text" @bind="messageInput" placeholder="Send a message...." />
+                    <div @onclick:stopPropagation="true" @onclick:preventDefault="true">
+                        <button @onclick="SendTextMessage" disabled="@(!IsConnected)">Send</button>
+                    </div>
+                </form>
+                <div id="messages">
+                    @foreach (var message in logLines)
+                    {
+                        <div class="message__wrapper">
+                            <div class="message__body">
+                                <strong class="message__author">🤖</strong>
+                                <p class="message__text">@message</p>
+                            </div>
+                        </div>
+                    }
+                </div>
+
+            </section>
+        </div>
+    </main>
+}
 
 @code {
+    private IJSObjectReference? _module;
     private ILogger<Chat> logger = null!;
     private HubConnection? hubConnection;
     private List<string> logLines = new List<string>();
@@ -90,6 +101,17 @@
 
     }
 
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            _module = await Js.InvokeAsync<IJSObjectReference>(
+                "import", "./Shared/Chat.razor.js");
+            await _module.InvokeVoidAsync("setScroll");
+        }
+        await base.OnAfterRenderAsync(firstRender);
+    }
+
     private async Task SendTextMessage()
     {
         if (hubConnection is not null)
@@ -114,6 +136,7 @@
     {
         if (hubConnection is not null)
         {
+            logger.LogDebug("Chat has been DisposeAsync");
             await hubConnection.SendAsync("LeaveRoom", GameId, userMail);
             await hubConnection.StopAsync();
             await hubConnection.DisposeAsync();
@@ -147,6 +170,5 @@
     {
         var encodedMsg = $"{message} to room #{GameId}";
         await AddNewMessageToChatLog(encodedMsg);
-        StateHasChanged();
     }
 }
